--- a/public-flutter/index.html
+++ b/public-flutter/index.html
@@ -34,7 +34,7 @@
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    const serviceWorkerVersion = "4019624333";
+    const serviceWorkerVersion = "3697852850";
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
@@ -43,6 +43,11 @@
           integrity="sha384-2Vr9MyareT7qv+wLp1zBt78ZWB4aljfCTMUrml3/cxm0W81ahmDOC6uyNmmn0Vrc"
           crossorigin="anonymous"></script>
   <script src="assets/packages/aad_oauth/assets/msalv2.js"></script>
+
+  <script type="text/javascript">
+    window.flutterWebRenderer = "html";
+
+  </script>
 </head>
 <body>
   <script>
